[gd_scene load_steps=7 format=2]

[ext_resource path="res://ttf/Farm to Market Bold Demo.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ttf/atype_20.tres" type="DynamicFont" id=2]
[ext_resource path="res://ttf/farm_to_market_fancy_127.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/night_round/night_round.gd" type="Script" id=4]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0.211765, 0.211765, 0.211765, 0.486275 )
use_mipmaps = true
font_data = ExtResource( 1 )

[node name="night_round" type="Spatial"]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="TabContainer" type="TabContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 67.0
margin_right = -119.0
margin_bottom = -98.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Tabs" parent="Control/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 39.0
margin_right = -4.0
margin_bottom = -4.0

[node name="stats" type="Label" parent="Control/TabContainer/Status"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.5
margin_top = -42.0
margin_right = 512.5
margin_bottom = 42.0
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "awdawdwad
awdawdwa
awdwadawd"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="Control/TabContainer/Status"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.5
margin_right = 512.5
margin_bottom = 156.0
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "End Of Day # 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sell" type="Tabs" parent="Control/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 39.0
margin_right = -4.0
margin_bottom = -4.0

[node name="SellItemsList" type="ItemList" parent="Control/TabContainer/Sell"]
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 9.0
margin_right = 285.0
margin_bottom = -12.0
allow_reselect = true
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Sell"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -714.0
margin_top = 12.0
margin_right = -13.0
margin_bottom = 496.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="Control/TabContainer/Sell/VBoxContainer"]
margin_right = 701.0
margin_bottom = 45.0
text = "Item description
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellItemButton" type="Button" parent="Control/TabContainer/Sell/VBoxContainer"]
margin_top = 49.0
margin_right = 701.0
margin_bottom = 76.0
text = "Sell Item"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Tabs" parent="Control/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 39.0
margin_right = -4.0
margin_bottom = -4.0

[node name="instructions" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -509.65
margin_top = 292.95
margin_right = 515.35
margin_bottom = 463.95
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -92.0
margin_right = 128.0
margin_bottom = -16.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -36.0
margin_right = 128.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "Next Day"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 21.0
margin_top = 2.0
margin_right = 533.0
margin_bottom = 45.0
text = "Gold: 999"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="Control/TabContainer/Sell/SellItemsList" to="." method="_on_SellItemsList_item_selected"]
[connection signal="pressed" from="Control/TabContainer/Sell/VBoxContainer/SellItemButton" to="." method="_on_SellItemButton_pressed"]
[connection signal="pressed" from="Control/StartButton" to="." method="_on_StartButton_pressed"]
